--- a/products.html
+++ b/products.html
@@ -16,8 +16,8 @@ S.T.A.C
 <stacbody>
 The Stock Trajectory Algorithmic Calculator is our cutting edge algorithmic trading software that is versatile in any market condition.
 
-<stac4><img src="stc4.png" alt="stc4" align="middle" height=400px>></stac4>
-<cldr><img src="cldr.png" alt="cldr" align="middle" height=400px></cldr>
+<stac4><img src="STC4.PNG" alt="stc4" align="middle" height=400px>></stac4>
+<cldr><img src="CLDR.PNG" alt="cldr" align="middle" height=400px></cldr>
 </stacbody>
 
 </html>
