--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@ The Stock Trajectory Algorithmic Calculator is our cutting edge algorithmic trad
 
 </stacbody>
 
-<stac4><img src="stc4.PNG" alt="stc4" align="middle"></stac4>
-<cldr><img src="CLDR.PNG" alt="cldr" align="middle"></cldr>
+<stac4><img src="stc4.PNG" alt="stc4"></stac4>
+<cldr><img src="CLDR.PNG" alt="cldr"></cldr>
 
 </html>
