--- a/products.html
+++ b/products.html
@@ -12,13 +12,18 @@
 <stac>
 S.T.A.C
 </stac>
-
+<stacbody2>
+&#40;Coming Soon&#41;</br>
+</stacbody2>
 <stacbody>
-The Stock Trajectory Algorithmic Calculator is our cutting edge algorithmic trading software that is versatile in any market condition.
-
+The Stock Trajectory Algorithmic Calculator is a simplified algorithmic trading program for regular people.
 </stacbody>
 
 <stac4><img src="stc4.PNG" alt="stc4"></stac4>
-<cldr><img src="CLDR.PNG" alt="cldr"></cldr>
-
+<stacbody2>
+Accuracy</br>
+</stacbody2>
+<cldr><img src="CLDR.PNG" alt="cldr" height="700px" width="1000px"></cldr>
+<prim><img src="PRIM.PNG" alt="prim" height="700px" width="1000px"></prim>
+<mpc><img src="MPC.PNG" alt="mpc" height="700px" width="1000px"></mpc>
 </html>
