--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </div>
 
 <h1>
-PENTHOUSE PORTFOLIOS
+PENTHOUSE</br>
+PORTFOLIOS
 </h1>
 
 <h2>
@@ -18,3 +19,4 @@ Soon To Be The New Face Of Finance.
 </h2>
 
 </html
+
