--- a/products.html
+++ b/products.html
@@ -12,18 +12,30 @@
 <stac>
 S.T.A.C
 </stac>
-<stacbody2>
+<comesoon>
 &#40;Coming Soon&#41;</br>
-</stacbody2>
+</comesoon>
 <stacbody>
-The Stock Trajectory Algorithmic Calculator is a simplified algorithmic trading program for regular people.
+S.T.A.C is a simplified algorithmic trading advisory program for regular people.</br>
+No confusing settings. No fees.</br>
+A one time purchase trading advisor.</br>
 </stacbody>
 
-<stac4><img src="stc4.PNG" alt="stc4"></stac4>
-<stacbody2>
-Accuracy</br>
-</stacbody2>
+<stacimg4><img src="stc4.PNG" alt="stc4"></stacimg4>
+<trec>
+Track Record</br>
+</trec>
+<captionn>All stock data was complied over a 1 month period when the program was in testing.</caption>
+<cldrhead>
+CLDR
+</cldrhead>
 <cldr><img src="CLDR.PNG" alt="cldr" height="700px" width="1000px"></cldr>
+<primhead>
+PRIM
+</primhead>
 <prim><img src="PRIM.PNG" alt="prim" height="700px" width="1000px"></prim>
+<mpchead>
+MPC
+</mpchead>
 <mpc><img src="MPC.PNG" alt="mpc" height="700px" width="1000px"></mpc>
 </html>
