--- a/about.html
+++ b/about.html
@@ -10,7 +10,20 @@
 </div>
 
 <about>
-Penthouse Portfolios is a hedge fund founded and ran by a 17 year old from Virginia.
+Penthouse Portfolios is a hedge fund founded and ran by a 17 year old from Virginia.</br>
+</br>
 </about>
-
+<message>
+"I've constantly been getting told that I needed a track record to get funding,</br>
+but I'm a teenager to invest, so I couldn't get a track record.</br>
+Seeing all of my ideas come to fruition while I just had to sit there and watch.</br>
+It's like being the NBA with an injury. All I want to do is play the game.</br>
+A while back I made this program that actually turned out to be really accurate,</br>
+on some days even perfect, at predicting stock prices. I have this great program and these great ideas,</br>
+but still no funding. So, I decided that instead of continuing trying to find someone else to fund my ideas,</br>
+I'm going to sell my program so I can fund my ideas myself."</br>
+</message>
+<sig>
+- Penthouse Portfolios CEO, Josh Oldmixon
+</sig>
 </html>
