--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@ Penthouse Portfolios is a hedge fund founded and ran by a 17 year old from Virgi
 </br>
 </about>
 <message>
-"I've constantly been getting told that I needed a track record to get funding,</br>
-but I'm a teenager to invest, so I couldn't get a track record.</br>
+"I've constantly been getting told that I needed a track record to get funding to invest,</br>
+but I'm a teenager with no money, so I couldn't get a track record.</br>
 Seeing all of my ideas come to fruition while I just had to sit there and watch.</br>
 It's like being the NBA with an injury. All I want to do is play the game.</br>
 A while back I made this program that actually turned out to be really accurate,</br>
