--- a/products.html
+++ b/products.html
@@ -25,7 +25,7 @@ A one time purchase trading advisor.</br>
 <trec>
 Track Record</br>
 </trec>
-<captionn>All stock data was complied over a 1 month period when the program was in testing.</caption>
+<captionn>All data was complied over a 1 month period when the program was in testing.</caption>
 <cldrhead>
 CLDR
 </cldrhead>
