--- a/products.html
+++ b/products.html
@@ -13,13 +13,7 @@
 S.T.A.C
 </stac>
 <comesoon>
-$50</br>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="M9ZTRSE57QNNA">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+Coming Soon</br>
 </comesoon>
 <stacbody>
 S.T.A.C is a simplified algorithmic trading advisory program for regular people.</br>
