--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
   <a href="about.html">About Us</a>
 </div>
 
+<phlogo><img src="logo.PNG" alt="stc4" height="500px" width="500px"></phlogo>
+
 <h1>
 PENTHOUSE</br>
 PORTFOLIOS
 </h1>
-
-<h2>
-Soon To Be The New Face Of Finance.
-</h2>
 
 </html
 
