--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <a href="about.html">About Us</a>
 </div>
 
-<phlogo><img src="logo.png" alt="logo" height="500px" width="500px"></phlogo>
+<phlogo><img src="logo.PNG" alt="stc4" height="500px" width="500px"></phlogo>
 
 <h1>
 PENTHOUSE</br>
