--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!doctype html>
 <html>
-	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Pirata+One&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
-
-<div class = "navbar">
-  <a href="index.html">Home</a>
-  <a href="products.html">Products</a>
-  <a href="about.html">About Us</a>
-</div>
 
 <phlogo><img src="logo.png" alt="stc4" height="500px" width="500px"></phlogo>
 
 <h1>
-PENTHOUSE</br>
-PORTFOLIOS
+C O M I N G</br>
+S O O N
 </h1>
 
 </html
