--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="theme-color" content="#ffffff">
 </head>
 
-<phlogo><img src="logo.png" alt="stc4" height="500px" width="500px"></phlogo>
+<phlogo><img src="logo.png" height="500px" width="500px"></phlogo>
 
 <h1>
 C O M I N G</br>
