--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
 	<link href="https://fonts.googleapis.com/css?family=Pirata+One&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
+
+<title>Penthouse Portfolios</title>
+
+<meta name="Description" content="Penthouse Portfolios is the start-up hedge fund trying to change the face of finance.">
+
+<meta name="KeyWords" content="penthouse portfolios, penthouse, portfolios, penthouseportfolios, hedge fund, investments, investor, stocks">
+
 <head>
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
