--- a/contact.html
+++ b/contact.html
@@ -10,17 +10,13 @@
   <b1><img src="whitelogo.png" alt="stc4" height="100px" width="100px"></b1>
 </div>
 
-<mnts>
-<img src="mnts.jpg" alt="mnts" width="800px">
-</mnts>
+<h3>
+Contact Us
+</h3>
 
-<h1>
-Penthouse Portfolios
-</h1>
-
-<h2>
-The Future of Finance.
-</h2>	
+<words>
+<a link href="mailto:josh@penthouseportfolios.com">josh@penthouseportfolios.com</a>
+</words>
 
 </html
 
