--- a/products.html
+++ b/products.html
@@ -4,38 +4,10 @@
 	<link href="main.css" rel="stylesheet" type="text/css"/>
 
 <div class = "navbar">
-  <a href="index.html">Home</a>
-  <a href="products.html">Products</a>
+  <a href="contact.html">Contact Us</a>
   <a href="about.html">About Us</a>
+  <a href="index.html">Home</a>
+  <b1>Penthouse Portfolios</b1>
 </div>
 
-<stac>
-S.T.A.C
-</stac>
-<comesoon>
-Coming Soon</br>
-</comesoon>
-<stacbody>
-S.T.A.C is a simplified algorithmic trading advisory program for regular people.</br>
-No confusing settings. No fees.</br>
-A one time purchase trading advisor.</br>
-</stacbody>
-
-<stacimg4><img src="stc4.PNG" alt="stc4"></stacimg4>
-<trec>
-Track Record</br>
-</trec>
-<captionn>All data was complied over a 1 month period when the program was in testing.</caption>
-<cldrhead>
-CLDR
-</cldrhead>
-<cldr><img src="CLDR.PNG" alt="cldr" height="500px" width="700px"></cldr>
-<primhead>
-PRIM
-</primhead>
-<prim><img src="PRIM.PNG" alt="prim" height="500px" width="700px"></prim>
-<mpchead>
-MPC
-</mpchead>
-<mpc><img src="MPC.PNG" alt="mpc" height="500px" width="700px"></mpc>
 </html>
