--- a/about.html
+++ b/about.html
@@ -4,9 +4,10 @@
 	<link href="main.css" rel="stylesheet" type="text/css"/>
 
 <div class = "navbar">
+  <a href="contact.html">Contact Us</a>
+  <a href="strategy.html">About Us</a>
   <a href="index.html">Home</a>
-  <a href="products.html">Products</a>
-  <a href="about.html">About Us</a>
+  <b1>Penthouse Portfolios</b1>
 </div>
 
 <about>
