--- a/strategy.html
+++ b/strategy.html
@@ -10,17 +10,13 @@
   <b1><img src="whitelogo.png" alt="stc4" height="100px" width="100px"></b1>
 </div>
 
-<mnts>
-<img src="mnts.jpg" alt="mnts" width="800px">
-</mnts>
+<h3>
+About Us
+</h3>
 
-<h1>
-Penthouse Portfolios
-</h1>
-
-<h2>
-The Future of Finance.
-</h2>	
-
-</html
-
+<words>
+Penthouse Portfolios was founded by Josh Oldmixon. The purpose of Penthouse is to<br>
+grow funds for companies and high networth individuals in the creative space<br>
+in order to finance their future projects and grow their personal networth.
+</words>
+</html>
