--- a/strategy.html
+++ b/strategy.html
@@ -15,8 +15,18 @@ About Us
 </h3>
 
 <words>
-Penthouse Portfolios was founded by Josh Oldmixon. The purpose of Penthouse is to<br>
-grow funds for companies and high networth individuals in the creative space<br>
-in order to finance their future projects and grow their personal networth.
+Penthouse Portfolios is an<br>
+investment fund focused on<br>
+diversifying assets for<br>
+indiviuals and companies<br>
+in the creative space in<br>
+to finance future<br>
+order projects and ideas.<br>
+Penthouse Portfolios is<br>
+truly the first fund<br>
+of it's kind, and we intend<br>
+on putting a new perspective<br>
+on what it means to be<br>
+an investment fund.<br>
 </words>
 </html>
