--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,10 @@
 Contact Us
 </h3>
 
-<words>
-<a link href="mailto:josh@penthouseportfolios.com">josh@penthouseportfolios.com</a>
-</words>
+<email>
+CEO:<br>
+<a href="mailto:josh@penthouseportfolios.com">josh@penthouseportfolios.com</a>
+</email>
 
 </html
 
