--- a/strategy.html
+++ b/strategy.html
@@ -20,7 +20,7 @@ investment fund focused on<br>
 diversifying assets for<br>
 indiviuals and companies<br>
 in the creative space in<br>
-to finance future<br>
+order to finance future<br>
 order projects and ideas.<br>
 Penthouse Portfolios is<br>
 truly the first fund<br>
