--- a/strategy.html
+++ b/strategy.html
@@ -21,7 +21,7 @@ diversifying assets for<br>
 indiviuals and companies<br>
 in the creative space in<br>
 order to finance future<br>
-order projects and ideas.<br>
+projects and ideas.<br>
 Penthouse Portfolios is<br>
 truly the first fund<br>
 of it's kind, and we intend<br>
