--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@
   <a href="contact.html">Contact Us</a>
   <a href="strategy.html">About Us</a>
   <a href="index.html">Home</a>
-  <b1><img src="whitelogo.png" alt="stc4" height="100px" width="100px"></b1>
 </div>
 
+<hdr>
+<img src="header3.jpg" alt="mnts" width="960px">
+</hdr>
+
 <mnts>
-<img src="mnts.jpg" alt="mnts" width="800px">
+<img src="mnts3.jpg" alt="mnts" width="960px">
 </mnts>
 
 <h1>
-Penthouse Portfolios
+Coming Soon.
 </h1>
 
-<h2>
-The Future of Finance.
-</h2>	
-
 </html
-
