--- a/strategy.html
+++ b/strategy.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+	<meta name="description" content="From the groundfloor to the penthouse." />
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
 
@@ -7,26 +8,18 @@
   <a href="contact.html">Contact Us</a>
   <a href="strategy.html">About Us</a>
   <a href="index.html">Home</a>
-  <b1><img src="whitelogo.png" alt="stc4" height="100px" width="100px"></b1>
 </div>
 
-<h3>
-About Us
-</h3>
+<hdr>
+<img src="header3.jpg" alt="mnts" width="960px">
+</hdr>
 
-<words>
-Penthouse Portfolios is an<br>
-investment fund focused on<br>
-diversifying assets for<br>
-indiviuals and companies<br>
-in the creative space in<br>
-order to finance future<br>
-projects and ideas.<br>
-Penthouse Portfolios is<br>
-truly the first fund<br>
-of it's kind, and we intend<br>
-on putting a new perspective<br>
-on what it means to be<br>
-an investment fund.<br>
-</words>
-</html>
+<mnts>
+<img src="mnts3.jpg" alt="mnts" width="960px">
+</mnts>
+
+<h1>
+Coming Soon.
+</h1>
+
+</html
