--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,12 @@
   <a href="contact.html">Contact Us</a>
   <a href="strategy.html">About Us</a>
   <a href="index.html">Home</a>
-  <b1><img src="whitelogo.png" alt="stc4" height="100px" width="100px"></b1>
 </div>
+
+<hdr>
+<img src="header3.jpg" alt="mnts" width="960px">
+</hdr>
+
 
 <h3>
 Contact Us
@@ -20,4 +24,3 @@ CEO:<br>
 </email>
 
 </html
-
