--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
 
-<div class = "navbar">
-  <a href="contact.html">Contact Us</a>
-  <a href="strategy.html">About Us</a>
-  <a href="index.html">Home</a>
-</div>
-
 <hdr>
 <img src="header3.jpg" alt="mnts" width="960px">
 </hdr>
@@ -18,8 +12,8 @@
 <img src="mnts3.jpg" alt="mnts" width="960px">
 </mnts>
 
-<h1>
-Coming Soon.
-</h1>
+<body>
+Penthouse Portfolios is an independent investment firm that manages capital for private investors.<br> For more information, please contact CEO Josh Oldmixon <a href="mailto:josh@penthouseportfolios.com">josh@penthouseportfolios.com</a>
+</body>
 
 </html
