--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </mnts>
 
 <body>
-Penthouse Portfolios is an independent investment firm that manages capital for private investors.<br> For more information, please contact CEO Josh Oldmixon <a href="mailto:josh@penthouseportfolios.com">josh@penthouseportfolios.com</a>
+Penthouse Portfolios is an independent investment firm that manages capital for private investors.<br>
+Our website is currently under renovation.<br>
+For more information, please contact CEO Josh Oldmixon <a href="mailto:josh@penthouseportfolios.com">josh@penthouseportfolios.com</a>
 </body>
 
 </html
