--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Penthouse Portfolios
 <body>
 Penthouse Portfolios is an independent investment firm that manages capital for private investors.<br>
 Our website is currently under renovation.<br>
-For more information, please contact CEO Josh Oldmixon <a href="mailto:oldmixonjosh@gmail.com">oldmixonjosh@gmail.com</a>
+For more information, please contact CEO Josh Oldmixon <a href="mailto:josh@penthouseportfolios.com">josh@penthouseportfolios.com</a>
 </body>
 
 </html
