--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ Penthouse Portfolios
 </mnts>
 
 <body>
-Penthouse Portfolios is an independent investment firm that manages capital for private investors.<br>
+Penthouse Portfolios is a quantitative hedge fund focused on investments in the healthcare industry.<br>
 Our website is currently under renovation.<br>
-For more information, please contact CEO Josh Oldmixon <a href="mailto:josh@penthouseportfolios.com">josh@penthouseportfolios.com</a>
+For more information, please contact CEO Josh Oldmixon <a href="mailto:info@pentport.com">info@pentport.com</a>
 </body>
 
 </html
