--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Penthouse Portfolios
 </mnts>
 
 <body>
-Penthouse Portfolios is a quantitative hedge fund focused on investments in the healthcare industry.<br>
+Penthouse Portfolios is a New York City based quantitative hedge fund with investments focused in US equities.<br>.
 Our website is currently under renovation.<br>
 For more information, please contact CEO Josh Oldmixon <a href="mailto:info@pentport.com">info@pentport.com</a>
 </body>
