--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Penthouse Portfolios
 <body>
 Penthouse Portfolios is a New York City based quantitative hedge fund with investments focused in US equities.<br>.
 Our website is currently under renovation.<br>
-For more information, please contact CEO Josh Oldmixon <a href="mailto:info@pentport.com">info@pentport.com</a>
+For more information, please email <a href="mailto:info@pentport.com">info@pentport.com</a>
 </body>
 
 </html
