--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ Penthouse Portfolios
 </mnts>
 
 <body>
-Penthouse Portfolios is a New York City based quantitative hedge fund with investments focused in US equities.<br>.
+Penthouse Portfolios is a quantitative hedge fund with investments focused in US equities.<br>
+Penthouse operates in New York and actively manages capital for private investors.
 Our website is currently under renovation.<br>
 For more information, please email <a href="mailto:info@pentport.com">info@pentport.com</a>
 </body>
