--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Penthouse Portfolios
 
 <body>
 Penthouse Portfolios is a quantitative hedge fund with investments focused in US equities.<br>
-Penthouse operates in New York and actively manages capital for private investors.
+Penthouse operates in New York and actively manages capital for private investors.<br>
 Our website is currently under renovation.<br>
 For more information, please email <a href="mailto:info@pentport.com">info@pentport.com</a>
 </body>
