--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,26 @@
 <!doctype html>
 <html>
+  <title>
+    Josh Oldmixon   
+  </title>
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
 
-<div class = "navbar">
-  <a href="contact.html">Contact Us</a>
-  <a href="strategy.html">About Us</a>
-  <a href="index.html">Home</a>
-</div>
+  <div class = "navbar">
+    <a href="contact.html">Contact</a>
+    <a href="poker_sims.html">Poker Combinatorics</a>
+    <a href="coint_gui.html">Cointegration GUI</a>
+    <a href="arb_sb.html">Arbitrage Betting</a>
+    <a href="current_project.html">Current Project</a>
+    <a href="index.html">Home</a>
+  </div>
 
-<hdr>
-<img src="header3.jpg" alt="mnts" width="960px">
-</hdr>
+<contactinfo>
+Contact<br>
+<br>
+<a href="mailto:josholdmixon@gmail.com">josholdmixon@gmail.com</a><br>
+<a href="https://www.linkedin.com/in/josholdmixon/">LinkedIn</a>
+</contactinfo>
 
-
-<h3>
-Contact Us
-</h3>
-
-<email>
-CEO:<br>
-<a href="mailto:josh@penthouseportfolios.com">josh@penthouseportfolios.com</a>
-</email>
 
 </html
