--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!doctype html>
 <html>
 <title>
-Penthouse Portfolios   
+Josh Oldmixon   
 </title>
-	<meta name="description" content="From the groundfloor to the penthouse." />
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
 
-<hdr>
-<img src="header3.jpg" alt="mnts" width="960px">
-</hdr>
+  <div class = "navbar">
+    <a href="contact.html">Contact</a>
+    <a href="poker_sims.html">Poker Combinatorics</a>
+    <a href="coint_gui.html">Cointegration GUI</a>
+    <a href="arb_sb.html">Arbitrage Betting</a>
+    <a href="current_project.html">Current Project</a>
+    <a href="index.html">Home</a>
+  </div>
 
-<mnts>
-<img src="mnts3.jpg" alt="mnts" width="960px">
-</mnts>
-
-<body>
-Penthouse Portfolios is a quantitative hedge fund with investments focused in US equities.<br>
-Penthouse operates in New York and actively manages capital for private investors.<br>
-Our website is currently under renovation.<br>
-For more information, please email <a href="mailto:info@pentport.com">info@pentport.com</a>
-</body>
+<pagetext>
+  Hi, thank you so much for taking the time to look at some of my favorite projects.
+  Due to the proprietary nature of some of these, I prefer not to post them on GitHub.
+</pagetext>
 
 </html
