--- a/arb_sb.html
+++ b/arb_sb.html
@@ -14,8 +14,8 @@
     <a href="current_project.html">Current Project</a>
     <a href="index.html">Home</a>
   </div>
-  
-<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+
+<title>arb_betting</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -14592,6 +14592,24 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Arbitrage-Betting">Arbitrage Betting<a class="anchor-link" href="#Arbitrage-Betting">&#182;</a></h1><p>This program scrapes odds from online sportsbooks in order to determine if there are arbitrage opportunities to generate a risk-free profit.</p>
+
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>$Arbitrage\ \%=(\frac{1}{First Odd})*100 + (\frac{1}{Second Odd})*100$
+$\begin{cases}
+\text{&lt;100\%},  &amp; \text{arbitrage exists} \\
+\text{&gt;100\%}, &amp; \text{arbitrage doesn't exist}
+\end{cases}$</p>
+<p>$Amount\ to\ Bet = \frac{Investment Amount}{1+(\frac{First Odd}{Second Odd})}$</p>
+<p>$Profitability\ = \frac{Investment Amount}{Arbitrage \%} - \textrm{Investment Amount}$</p>
 
 </div>
 </div>
