--- a/arb_sb.html
+++ b/arb_sb.html
@@ -14605,8 +14605,8 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>$Arbitrage\ \%=(\frac{1}{First Odd})*100 + (\frac{1}{Second Odd})*100$
 $\begin{cases}
-\text{&lt;100\%},  &amp; \text{arbitrage exists} \\
-\text{&gt;100\%}, &amp; \text{arbitrage doesn't exist}
+\text{&lt;100%},  &amp; \text{arbitrage exists} \\
+\text{&gt;100%}, &amp; \text{arbitrage doesn't exist}
 \end{cases}$</p>
 <p>$Amount\ to\ Bet = \frac{Investment Amount}{1+(\frac{First Odd}{Second Odd})}$</p>
 <p>$Profitability\ = \frac{Investment Amount}{Arbitrage \%} - \textrm{Investment Amount}$</p>
