--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@ Josh Oldmixon
   </div>
 
 <pagetext>
-  Hi, thank you so much for taking the time to look at some of my favorite projects.
-  Due to the proprietary nature of some of these, I prefer not to post them on GitHub.
+  Last Updated: 10/31/2023 3:54AM
 </pagetext>
 
 </html
