--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ Josh Oldmixon
   </div>
 
 <pagetext>
-  Last Updated: 10/31/2023 3:54AM
+  Hi, thank you so much for taking the time to look at some of my favorite projects.
+  This site was last updated on Tuesday, October 31st at 3:59 AM.
 </pagetext>
 
 </html
