--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Josh Oldmixon
 
 <pagetext>
   Hi, thank you so much for taking the time to look at some of my favorite projects.
-  This site was last updated on Tuesday, October 31st at 3:59 AM.
+  This site was last updated on Tuesday, October 31st, 2023 at 3:59 AM.
 </pagetext>
 
 </html
