--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ Josh Oldmixon
   </div>
 
 <pagetext>
-  Hi, thank you so much for taking the time to look at some of my favorite projects.
-  This site was last updated on Tuesday, October 31st, 2023 at 3:59 AM.
+  Hi, thank you so much for taking the time to look at some of my favorite projects.<br>
+  This site was last updated on Tuesday, October 31st, 2023 at 4:02 AM EST.
 </pagetext>
 
 </html
