--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Josh Oldmixon
   </div>
 
 <pagetext>
-  Hi, thank you so much for taking the time to look at some of my favorite projects.<br>
+  Hi, thank you so much for taking the time to look at some of my favorite projects.
   This site was last updated on Tuesday, October 31st, 2023 at 4:49 AM EST.
 </pagetext>
 
