--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>
 Josh Oldmixon   
-</title>
+</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
 
