--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!doctype html>
 <html>
 <title>
-Josh Oldmixon   
+Penthouse Portfolios   
 </title>
+	<meta name="description" content="From the ground floor to the Penthouse." />
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
+<mnts>
+<img src="mnts3.jpg" alt="mnts" width="960px">
+</mnts>
+<br>
+<body>
+Penthouse Portfolios is a quantitative investment firm that manages capital for private investors with a current AUM of $500,000.<br>
+Our website is currently under renovation.<br>
+For more information, please contact email us at: <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>
+</body>
 
-  <div class = "navbar">
-    <a href="contact.html">Contact</a>
-    <a href="poker_sims.html">Poker Combinatorics</a>
-    <a href="coint_gui.html">Cointegration GUI</a>
-    <a href="arb_sb.html">Arbitrage Betting</a>
-    <a href="index.html">Home</a>
-  </div>
-<pagevideo>
-<center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/8qBqhc3_o0s?si=bmH_HMbLDfkO1BS6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</center>
-</pagevideo>
-</html>
+</html
