--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Penthouse Portfolios
 <body>
 Penthouse Portfolios is a quantitative investment firm that manages capital for private investors with a current AUM of $500,000.<br>
 Our website is currently under renovation.<br>
-For more information, please contact email us at: <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>
+For more information, please email us: <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>
 </body>
 
 </html
