--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ Penthouse Portfolios
 </mnts>
 <br>
 <body>
-Penthouse Portfolios is a quantitative investment firm that manages capital for private investors with a current AUM of $500,000.<br>
+Penthouse Portfolios is a quantitative investment firm.<br>
+AUM as of July 2024: ~$500,000.<br>
 Our website is currently under renovation.<br>
 For more information, please email us: <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>
 </body>
