--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!doctype html>
 <html>
+
 <title>
-Penthouse Portfolios   
+Penthouse Technologies
 </title>
-	<meta name="description" content="From the ground floor to the Penthouse." />
+
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
-<mnts>
-<img src="mnts3.jpg" alt="mnts" width="960px">
-</mnts>
-<body>
-Penthouse Portfolios is a quantitative investment firm.<br>
-AUM as of July 2024: ~$500,000.<br>
-Our website is currently under renovation.<br>
-For more information, please email us: <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>
-</body>
+  <img src="phwhitelogo.png" alt="logo" width="125px" class="center-logo">
 
-</html
+  <!-- <div class = "navbar">
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </div> -->
+<p>
+Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia and currently has an AUM of $500,000.
+Penthouse uses cutting-edge, proprietary technology to systematically trade US equities with investor capital. <br>
+For more information, please email: <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>.
+</p>
+</html>
