--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ Penthouse Technologies
 <p>
 Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia and currently has an AUM of $500,000.
 Penthouse uses cutting-edge, proprietary technology to systematically trade US equities with investor capital. <br>
-For more information, please email: <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>.
+For more information, please email <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>.
 </p>
 </html>
