--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@ Penthouse Technologies
 
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
-  <img src="phwhitelogo.png" alt="logo" width="125px" class="center-logo">
+  <img src="logo.png" alt="logo" width="125px" class="center-logo">
 
-  <!-- <div class = "navbar">
-    <a href="about.html">About</a>
+  <div class = "navbar">
+    <a href="index.html">About</a>
+    <a href="strategies.html">Strategies</a>
     <a href="contact.html">Contact</a>
-  </div> -->
-<p>
-Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia and currently has an AUM of $500,000.
-Penthouse uses cutting-edge, proprietary technology to systematically trade US equities with investor capital. <br>
-For more information, please email <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>.
-</p>
+  </div>
+  <img src="city.jpg" alt="logo" width="400px" class="center-citypic">
+
+  <p>
+    Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. <br>
+  </p>
 </html>
