--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Penthouse Technologies
 
   <div class = "navbar">
     <a href="index.html">About</a>
-    <a href="strategies.html">Strategies</a>
+    <a href="strategy.html">Strategies</a>
     <a href="contact.html">Contact</a>
   </div>
   <img src="city.jpg" alt="logo" width="400px" class="center-citypic">
