--- a/strategy.html
+++ b/strategy.html
@@ -1,25 +1,25 @@
 <!doctype html>
 <html>
-	<meta name="description" content="From the groundfloor to the penthouse." />
+
+<title>
+Penthouse Technologies
+</title>
+
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
+  <img src="logo.png" alt="logo" width="125px" class="center-logo">
 
-<div class = "navbar">
-  <a href="contact.html">Contact Us</a>
-  <a href="strategy.html">About Us</a>
-  <a href="index.html">Home</a>
-</div>
-
-<hdr>
-<img src="header3.jpg" alt="mnts" width="960px">
-</hdr>
-
-<mnts>
-<img src="mnts3.jpg" alt="mnts" width="960px">
-</mnts>
-
+  <div class = "navbar">
+    <a href="index.html">About</a>
+    <a href="strategy.html">Strategies</a>
+    <a href="contact.html">Contact</a>
+  </div>
 <h1>
-Coming Soon.
+  The Expedition Fund
 </h1>
-
-</html
+<img src="Picture1.png" alt="logo" width="200px" class="center-stratpic">
+<p class="shift">
+  When you go into a convenience store and you want to buy a soda, you have two main options: you can buy a Coke product or a Pepsi product. To keep this example simple, let’s ignore their competitors for a second and just say both of these companies own 50% of the soda market. In the long-run you would expect that the stock price of both Coke and Pepsi move in very similar ways. If more people are buying sodas, both companies win, and if less people are buying sodas, both companies lose. Now how could this pair of companies be used to create a hedged investment product? You take advantage of the short-term price discrepancies. Let’s say both companies have a stock price of $100. If Pepsis stock price jumps up to $105 while Cokes price stays at $100, we are now presented with an opportunity to take advantage of what is known as statistical arbitrage. We know that these companies have this underlying relationship, so we expect that sometime in the near future, their prices will go back to being equal. Because we have this belief due to statistical analysis, we then would buy Coke and short Pepsi. If Cokes price jumps up to $105 where Pepsi is, we profit $5 per share, but if Pepsis price dives back down to $100, we still profit $5 per share. This is the underlying concept behind the software Penthouse has created. However, this concept is very simple and has been around for decades. 
+  Due to pairs trading being so widely used, the real problem becomes identifying profitable pairs. This is where the Penthouse Technologies proprietary neural network system comes into play. Simply put, this system determines which pairs are the most likely to have high performance.
+</p>
+</html>
