--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,18 @@
 <!doctype html>
 <html>
-  <title>
-    Josh Oldmixon   
-  </title>
+
+<title>
+Penthouse Technologies
+</title>
+
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
+  <img src="logo.png" alt="logo" width="125px" class="center-logo">
 
   <div class = "navbar">
+    <a href="index.html">About</a>
+    <a href="strategy.html">Strategies</a>
     <a href="contact.html">Contact</a>
-    <a href="poker_sims.html">Poker Combinatorics</a>
-    <a href="coint_gui.html">Cointegration GUI</a>
-    <a href="arb_sb.html">Arbitrage Betting</a>
-    <a href="index.html">Home</a>
   </div>
-
-<contactinfo>
-Contact<br>
-<br>
-<a href="mailto:josholdmixon@gmail.com">josholdmixon@gmail.com</a><br>
-<a href="https://www.linkedin.com/in/josholdmixon/">LinkedIn</a>
-</contactinfo>
-
-
+<p>For more information, please email <a href="mailto:josholdmixon@gmail.com">info@pentport.com</a>.</p>
 </html>
