--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html>
 
 <title>
-Penthouse Technologies
+Penthouse Portfolios
 </title>
 
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
-  <img src="logo.png" alt="logo" width="125px" class="center-logo">
 
   <div class = "navbar">
-    <a href="index.html">About</a>
+    <img src="phwhitelogo.png" alt="logo" width="300px" class="center-logo">
+    <!-- <a href="index.html">Home</a>
     <a href="strategy.html">Strategies</a>
-    <a href="contact.html">Contact</a>
+    <a href="about.html">About Us</a>
+    <a href="contact.html">Contact</a> -->
   </div>
-  <img src="city.jpg" alt="logo" width="400px" class="center-citypic">
 
   <p>
-    Penthouse Technologies is a quantitative investment firm based in Richmond, Virginia that uses proprietary technology to systematically trade US equities with investor capital. <br>
+    Coming Soon. <br>
   </p>
 </html>
