--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@ Penthouse Portfolios
 	<link href="main.css" rel="stylesheet" type="text/css"/>
   <div class = "splash">
     <div class = "splashtext">
-      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here. ↓
-    </div>
-  </div>
-  <div class = "splash">
-    <div class = "splashtext">
-      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here.
+      The Next<br>&emsp;Generation<br>&emsp;&emsp; Is Here.<!--  ↓ -->
     </div>
   </div>
   <div class = "navbar">
