--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>
 Penthouse Portfolios
 </title>
-  <meta name="viewport" content="width=1024">
+  <meta name="viewport" content="width=device-width, initial-scale=0.1">
 	<link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
   <link href="https://db.onlinewebfonts.com/c/953440d6182da090377d805e5156873c?family=Korbin+W01+Medium" rel="stylesheet">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
